# Mercurio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doc_template.xml
.github/workflows/: cmake.yml  release.yaml
archive/: CMakeLists.txt  packed_extract.cpp
cinematic/: CMakeLists.txt  cinematic_to_gltf.cpp
scene/: CMakeLists.txt  kmp_search.cpp  l1_to_utf8.cpp  l1_to_utf8.hpp  scene_to_gltf.cpp
